# irskep.github.com

./: .gitignore  1k-hacker-news-readers-on-buildy.html  2017-year-in-review.html  404.html  CNAME  Makefile  Pipfile  _config.yml  advice-for-tech-recruiters-at-universities.html  anthony-presti-album.html  archives.html  artack.html  authors.html  bibble-biter.html  categories.html  changelog.html  computer-words-announcement.html  computer-words.html  elite-bungie-chopper-squadron.html  escort-wing.html  from-powerl-to-power-q-game-jam-to-product.html  game-jam-cv.html  game-reviews.html  games.html  gw0rp.html  hiring-faq.html  home-audio-with-os-x-and-cheap-consumer-electronics.html  how-to-hire-me.html  if-it-cant-be-done-with-git-and-text-files-its-not-worth-doing.html  index.html  index_old.html  ios-at-hipmunk.html  md_shy.py  mise.toml  music.html  music.md  my-dislocated-patella.html  my-masters-thesis.html  myopenid-hosted-verification.html  newpost  (+42 more)
1k-hacker-news-readers-on-buildy/: index.html
404/: index.html
_layouts/: default.html  post.html  static.html
_posts/: 2005-11-01-escort_wing.md  2006-07-01-artack.md  2009-09-24-my-dislocated-patella.md  2009-12-01-gw0rp.md  2010-05-10-advice-for-tech-recruiters-at-universities.md  2010-12-13-space-train-postmortem.md  2011-01-10-the-first-programming-book-i-ever-read.md  2011-01-22-quotes-from-this-weeks-cwru-student-newspaper.md  2012-04-05-if-it-cant-be-done-with-git-and-text-files-its-not-worth-doing.md  2012-12-15-what-ive-been-doing-lately.md  2013-06-22-teaching-in-turin.md
advice-for-tech-recruiters-at-universities/: index.html
art/: apple.ase  bass 1.piskel  buildy.ase  chippy.ase  clg.ase  cwru.ase  drums.piskel  keyboard.piskel  mim.ase  yelp.ase
artack/: index.html
articles/: index.html
author/: steve-johnson.html  steve-landey.html
blog/: index.html
coffee/: script.coffee
content/: resume.html  resume.json
crappy-articles/: index.html
css/: _reset.scss  style.css  style.css.map  style.scss
drafts/: 2017-year-in-review.html  home-audio-with-os-x-and-cheap-consumer-electronics.html  how-i-use-git.html  leveling-up-your-markdown-docs-with-computer-words.html  pcg32-the-perfect-prng-for-roguelikes.html  sendimals-what-it-is-and-why-i-made-it.html  the-first-programming-book-i-ever-read.html  what-its-like-to-write-a-sphinx-extension.html
escort-wing/: index.html
feeds/: all-en.atom.xml  all.atom.xml  all.rss.xml  articles.atom.xml  blog.atom.xml  crappy-articles.atom.xml  posts.atom.xml  (+5 more)
js/: main.js
(+182 files in other folders)
