[tool.poetry]
name = "steveasleep"
version = "0.1.0"
description = ""
authors = ["Steve Landey <steve@steveasleep.com>"]

[tool.poetry.dependencies]
python = "^3.9"
MarkupSafe = "^1.1.1"
appdirs = "^1.4.4"
blinker = "^1.4"
docutils = "^0.17.1"
feedgenerator = "^1.9.1"
ghp-import = "^1.1.0"
htmlmin = "^0.1.12"
hyphenator = "^0.6.0"
joblib = "^1.0.1"
pelican = "^4.6.0"
pelican-minify = "^0.9"
pyparsing = "^2.4.7"
python-dateutil = "^2.8.1"
smartypants = "^2.0.1"
typogrify = "^2.0.7"
Markdown = "^3.3.4"
"minchin.pelican.plugins.summary" = "^1.1.1"
Pygments = "^2.8.1"
Unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
