[tool.poetry]
name = "steveasleep"
version = "0.1.0"
description = ""
authors = ["Steve Landey <steve@steveasleep.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
appdirs = "^1.4.4"
blinker = "^1.4"
ghp-import = "^1.1.0"
hyphenator = "^0.6.0"
joblib = "^1.0.1"
pyparsing = "^2.4.7"
python-dateutil = "^2.8.1"
smartypants = "^2.0.1"
typogrify = "^2.0.7"
Markdown = "^3.3.4"
"minchin.pelican.plugins.summary" = "^1.1.1"
Pygments = "^2.8.1"
Unidecode = "^1.2.0"
attrs = "^21.2.0"
html5lib = "^1.1"
hyphenate = "^1.1.0"
xmljson = "^0.2.1"
prettyprinter = "^0.18.0"
pyyaml = "^6.0.1"
pelican = "^4.9.1"
jinja2 = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
