[project]
authors = [
    {name = "Steve Landey", email = "steve@steveasleep.com"},
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "appdirs<2.0.0,>=1.4.4",
    "attrs<22.0.0,>=21.2.0",
    "blinker<2.0,>=1.4",
    "ghp-import<2.0.0,>=1.1.0",
    "html5lib<2.0,>=1.1",
    "hyphenate<2.0.0,>=1.1.0",
    "hyphenator<1.0.0,>=0.6.0",
    "jinja2<4.0.0,>=3.1.4",
    "joblib<2.0.0,>=1.0.1",
    "markdown<4.0.0,>=3.7.0",
    "minchin-pelican-plugins-summary<2.0.0,>=1.1.1",
    "pelican<5.0.0,>=4.9.1",
    "prettyprinter<1.0.0,>=0.18.0",
    "Pygments<3.0.0,>=2.8.1",
    "pyparsing<3.0.0,>=2.4.7",
    "python-dateutil<3.0.0,>=2.8.1",
    "pyyaml<7.0.0,>=6.0.1",
    "typogrify<3.0.0,>=2.0.7",
    "Unidecode<2.0.0,>=1.2.0",
    "xmljson<1.0.0,>=0.2.1",
]
name = "steveasleep"
version = "0.1.0"
description = ""
package-mode = false

[dependency-groups]
dev = []

[tool.uv]
default-groups = []
